--- a/index.htm
+++ b/index.htm
@@ -15,9 +15,16 @@
       integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm"
       crossorigin="anonymous"
     />
+    <link rel="stylesheet" href="style.css" />
     <title>Hello, world!</title>
   </head>
   <body>
+    <div class="side-nav">
+      <div class="logo-box"></div>
+      <a href="#" class="search-options">Location</a>
+      <a href="#" class="search-options">Topic</a>
+      <a href="#" class="search-options">Rating</a>
+    </div>
     <div
       class="card"
       style="width: 18rem; margin-left: 50px; margin-top: 50px;"
@@ -26,8 +33,8 @@
         <h5 class="card-title">Card title</h5>
         <h6 class="card-subtitle mb-2 text-muted">Card subtitle</h6>
         <p class="card-text">
-          Some quick example text to build on the card title and make up the
-          bulk of the card's content.
+          Some text to build on the card title and make up the bulk of the
+          card's content.
         </p>
         <a href="#" class="card-link">Card link</a>
         <a href="#" class="card-link">Another link</a>
