made minor wording changes to html

--- a/signUp.html
+++ b/signUp.html
@@ -37,14 +37,14 @@
           <label for="skills"><b>Teachable Skills</b></label>
           <input type="text" placeholder="Skills (, seperated)" name="skills" required>
 
-          <label for="bio"><b>Bio about yourself</b></label>
+          <label for="bio"><b>Bio About Yourself</b></label>
           <input type="text" placeholder="Bio" name="bio" required>
 
             
           <div class="container">
             <div class="col-md-6">
                 <div class="form-group">
-                    <label>Upload Image</label>
+                    <label>Upload an Image Of Yourself</label>
                     <div class="input-group">
                         <span class="input-group-btn">
                             <span class="btn btn-default btn-file">
