fixed spacing of main page

--- a/index.htm
+++ b/index.htm
@@ -23,7 +23,7 @@
       crossorigin="anonymous"
     />
 
-    <title>Hello, world!</title>
+    <title>Teach.Me!</title>
   </head>
   <body>
     <div class="sidenav">
@@ -36,13 +36,13 @@
         class="btn btn-primary"
         style="margin-top: 450px; margin-left: 30px;"
       >
-        Primary
+        Sign Up!
       </button>
     </div>
 
     <div
       class="card"
-      style="width: 60rem; margin-left: 200px; margin-top: 50px;"
+      style="width: 60rem; margin-left: 300px; margin-top: 50px;"
     >
       <div class="card-body">
         <div class="container">
@@ -51,13 +51,59 @@
             <div class="col-8">
               <h5 class="card-title">Eddy Yeung ******</h5>
               <h5 class="card-subtitle mb-2 text-muted">
-                Skills: web dev, python
+                Skills: Web dev, Python
               </h5>
               <h5 class="card-subtitle mb-2 text-muted">
-                Age range: middle school, college
+                Age range: Middle School, College
               </h5>
             </div>
             <div class="col-23"><h5>~8 miles away</h5></div>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <div
+      class="card"
+      style="width: 60rem; margin-left: 300px; margin-top: 50px;"
+    >
+      <div class="card-body">
+        <div class="container">
+          <div class="row">
+            <div class="col-2"><img id="userPic" src="img/me.png" /></div>
+            <div class="col-8">
+              <h5 class="card-title">Jacob Lapinson *****</h5>
+              <h5 class="card-subtitle mb-2 text-muted">
+                Skills: Python, Java, JavaScript,
+              </h5>
+              <h5 class="card-subtitle mb-2 text-muted">
+                Age range: Elementry, Middle School, High School, College
+              </h5>
+            </div>
+            <div class="col-23"><h5>~12 miles away</h5></div>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <div
+      class="card"
+      style="width: 60rem; margin-left: 300px; margin-top: 50px;"
+    >
+      <div class="card-body">
+        <div class="container">
+          <div class="row">
+            <div class="col-2"><img id="userPic" src="img/me.png" /></div>
+            <div class="col-8">
+              <h5 class="card-title">Josh Barnett ***</h5>
+              <h5 class="card-subtitle mb-2 text-muted">
+                Skills: IT, Systems Administration, SQL
+              </h5>
+              <h5 class="card-subtitle mb-2 text-muted">
+                Age range: Career
+              </h5>
+            </div>
+            <div class="col-23"><h5>~2 miles away</h5></div>
           </div>
         </div>
       </div>
