--- a/index.htm
+++ b/index.htm
@@ -28,9 +28,34 @@
   <body>
     <div class="sidenav">
       <div class="logo-box"></div>
-      <a href="#" class="search-options">Location</a>
-      <a href="#" class="search-options">Topic</a>
-      <a href="#" class="search-options">Rating</a>
+      <div class="search-options">
+        <a href="#">Location</a>
+        <label class="container"
+          >10 Miles
+          <input type="checkbox" checked="checked" />
+          <span class="checkmark"></span>
+        </label>
+
+        <label class="container"
+          >25 Miles
+          <input type="checkbox" />
+          <span class="checkmark"></span>
+        </label>
+
+        <label class="container"
+          >50 Miles
+          <input type="checkbox" />
+          <span class="checkmark"></span>
+        </label>
+
+        <label class="container"
+          >100 miles
+          <input type="checkbox" />
+          <span class="checkmark"></span>
+        </label>
+      </div>
+      <div><a href="#">Skills</a></div>
+      <div><a href="#">Rating</a></div>
       <button
         type="button"
         class="btn btn-primary"
