fixed images of faces

--- a/index.htm
+++ b/index.htm
@@ -70,7 +70,7 @@
       <div class="card-body">
         <div class="container">
           <div class="row">
-            <div class="col-2"><img id="userPic" src="img/me.png" /></div>
+            <div class="col-2"><img id="userPic" src="img/JakesFace.png" /></div>
             <div class="col-8">
               <h5 class="card-title">Jacob Lapinson *****</h5>
               <h5 class="card-subtitle mb-2 text-muted">
@@ -93,7 +93,7 @@
       <div class="card-body">
         <div class="container">
           <div class="row">
-            <div class="col-2"><img id="userPic" src="img/me.png" /></div>
+            <div class="col-2"><img id="userPic" src="img/joshImage.gif" /></div>
             <div class="col-8">
               <h5 class="card-title">Josh Barnett ***</h5>
               <h5 class="card-subtitle mb-2 text-muted">
