fixed the side bar

--- a/index.htm
+++ b/index.htm
@@ -31,31 +31,84 @@
       <div class="search-options">
         <a href="#">Location</a>
         <label class="container"
+        style="font-size:12px"
           >10 Miles
           <input type="checkbox" checked="checked" />
           <span class="checkmark"></span>
         </label>
 
         <label class="container"
+        style="font-size:12px"
           >25 Miles
           <input type="checkbox" />
           <span class="checkmark"></span>
         </label>
 
         <label class="container"
+        style="font-size:12px"
           >50 Miles
           <input type="checkbox" />
           <span class="checkmark"></span>
         </label>
 
         <label class="container"
+        style="font-size:12px"
           >100 miles
           <input type="checkbox" />
           <span class="checkmark"></span>
         </label>
       </div>
       <div><a href="#">Skills</a></div>
-      <div><a href="#">Rating</a></div>
+      <div class="dropdown" >
+        <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" 
+        style="height:50px; width: 100">
+          Select Skill
+        </button>
+        <div class="dropdown-menu" aria-labelledby="dropdownMenuButton" 
+        style="font-color: black; font-size: 12px">
+          <a class="dropdown-item" href="#">Java</a>
+          <a class="dropdown-item" href="#">Python</a>
+          <a class="dropdown-item" href="#">JavaScript</a>
+        </div>
+      </div>
+
+      <div class="search-options">
+        <a href="#">Rating</a>
+        <label class="container"
+        style="font-size:12px"
+          > <i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i>
+          <input type="checkbox" checked="checked" />
+          <span class="checkmark"></span>
+        </label>
+
+        <label class="container"
+        style="font-size:12px"
+          > <i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i>
+          <input type="checkbox" />
+          <span class="checkmark"></span>
+        </label>
+
+        <label class="container"
+        style="font-size:12px"
+          > <i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i>
+          <input type="checkbox" />
+          <span class="checkmark"></span>
+        </label>
+
+        <label class="container"
+        style="font-size:12px"
+          > <i class="fas fa-star"></i><i class="fas fa-star"></i>
+          <input type="checkbox" />
+          <span class="checkmark"></span>
+        </label>
+
+        <label class="container"
+        style="font-size:12px"
+          > <i class="fas fa-star"></i>
+          <input type="checkbox" />
+          <span class="checkmark"></span>
+        </label>
+      </div>
       <button
         type="button"
         class="btn btn-primary"
@@ -74,7 +127,7 @@
           <div class="row">
             <div class="col-2"><img id="userPic" src="img/me.png" /></div>
             <div class="col-8">
-              <h5 class="card-title">Eddy Yeung ******</h5>
+              <h5 class="card-title" style="color: black">Eddy Yeung ******</h5>
               <h5 class="card-subtitle mb-2 text-muted">
                 Skills: Web dev, Python
               </h5>
@@ -97,7 +150,7 @@
           <div class="row">
             <div class="col-2"><img id="userPic" src="img/JakesFace.png" /></div>
             <div class="col-8">
-              <h5 class="card-title">Jacob Lapinson *****</h5>
+              <h5 class="card-title"style="color: black">Jacob Lapinson *****</h5>
               <h5 class="card-subtitle mb-2 text-muted">
                 Skills: Python, Java, JavaScript,
               </h5>
@@ -120,7 +173,7 @@
           <div class="row">
             <div class="col-2"><img id="userPic" src="img/joshImage.gif" /></div>
             <div class="col-8">
-              <h5 class="card-title">Josh Barnett ***</h5>
+              <h5 class="card-title" style="color: black">Josh Barnett ***</h5>
               <h5 class="card-subtitle mb-2 text-muted">
                 Skills: IT, Systems Administration, SQL
               </h5>
