--- a/index.htm
+++ b/index.htm
@@ -29,6 +29,10 @@
     <div class="sidenav">
       <div class="logo-box"></div>
       <div class="search-options">
+          <h2>
+            Teach.Me!
+          </h2>
+          <h10>The best way to learn is to teach!</h10>
         <a href="#">Location</a>
         <label class="container"
         style="font-size:12px"
@@ -127,7 +131,7 @@
           <div class="row">
             <div class="col-2"><img id="userPic" src="img/me.png" /></div>
             <div class="col-8">
-              <h5 class="card-title" style="color: black">Eddy Yeung ******</h5>
+              <h5 class="card-title" style="color: black">Eddy Yeung <i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i></h5>
               <h5 class="card-subtitle mb-2 text-muted">
                 Skills: Web dev, Python
               </h5>
@@ -135,7 +139,7 @@
                 Age range: Middle School, College
               </h5>
             </div>
-            <div class="col-23"><h5>~8 miles away</h5></div>
+            <div class="col-23" style="color: black"><h5>~8 miles away</h5></div>
           </div>
         </div>
       </div>
@@ -150,7 +154,7 @@
           <div class="row">
             <div class="col-2"><img id="userPic" src="img/JakesFace.png" /></div>
             <div class="col-8">
-              <h5 class="card-title"style="color: black">Jacob Lapinson *****</h5>
+              <h5 class="card-title"style="color: black">Jacob Lapinson <i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i></h5>
               <h5 class="card-subtitle mb-2 text-muted">
                 Skills: Python, Java, JavaScript,
               </h5>
@@ -158,7 +162,7 @@
                 Age range: Elementry, Middle School, High School, College
               </h5>
             </div>
-            <div class="col-23"><h5>~12 miles away</h5></div>
+            <div class="col-23" style="color: black"><h5>~12 miles away</h5></div>
           </div>
         </div>
       </div>
@@ -173,7 +177,7 @@
           <div class="row">
             <div class="col-2"><img id="userPic" src="img/joshImage.gif" /></div>
             <div class="col-8">
-              <h5 class="card-title" style="color: black">Josh Barnett ***</h5>
+              <h5 class="card-title" style="color: black">Josh Barnett <i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i></h5>
               <h5 class="card-subtitle mb-2 text-muted">
                 Skills: IT, Systems Administration, SQL
               </h5>
@@ -181,7 +185,7 @@
                 Age range: Career
               </h5>
             </div>
-            <div class="col-23"><h5>~2 miles away</h5></div>
+            <div class="col-23" style="color: black"><h5>~2 miles away</h5></div>
           </div>
         </div>
       </div>
