--- a/index.htm
+++ b/index.htm
@@ -57,9 +57,10 @@
       <div><a href="#">Skills</a></div>
       <div><a href="#">Rating</a></div>
       <button
+        onclick="location.href='signUp.html';"
         type="button"
         class="btn btn-primary"
-        style="margin-top: 450px; margin-left: 30px;"
+        style="margin-top: 300px; margin-left: 50px;"
       >
         Sign Up!
       </button>
@@ -95,7 +96,9 @@
       <div class="card-body">
         <div class="container">
           <div class="row">
-            <div class="col-2"><img id="userPic" src="img/JakesFace.png" /></div>
+            <div class="col-2">
+              <img id="userPic" src="img/JakesFace.png" />
+            </div>
             <div class="col-8">
               <h5 class="card-title">Jacob Lapinson *****</h5>
               <h5 class="card-subtitle mb-2 text-muted">
@@ -118,7 +121,9 @@
       <div class="card-body">
         <div class="container">
           <div class="row">
-            <div class="col-2"><img id="userPic" src="img/joshImage.gif" /></div>
+            <div class="col-2">
+              <img id="userPic" src="img/joshImage.gif" />
+            </div>
             <div class="col-8">
               <h5 class="card-title">Josh Barnett ***</h5>
               <h5 class="card-subtitle mb-2 text-muted">
@@ -151,5 +156,6 @@
       integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
       crossorigin="anonymous"
     ></script>
+    <script></script>
   </body>
 </html>
