added ed edd and eddy

--- a/index.htm
+++ b/index.htm
@@ -224,7 +224,7 @@
       <div class="card-body">
         <div class="container">
           <div class="row">
-            <div class="col-2"><img id="userPic" src="img/me.png" /></div>
+            <div class="col-2"><img id="userPic" src="img/ed.png" /></div>
             <div class="col-8">
               <h5 class="card-title" style="color: black">
                 Eddy Yeung <i class="fas fa-star"></i><i class="fas fa-star"></i
@@ -251,7 +251,7 @@
       <div class="card-body">
         <div class="container">
           <div class="row">
-            <div class="col-2"><img id="userPic" src="img/me.png" /></div>
+            <div class="col-2"><img id="userPic" src="img/edd.png" /></div>
             <div class="col-8">
               <h5 class="card-title" style="color: black">
                 Eddy Yeung <i class="fas fa-star"></i><i class="fas fa-star"></i
@@ -278,7 +278,7 @@
       <div class="card-body">
         <div class="container">
           <div class="row">
-            <div class="col-2"><img id="userPic" src="img/me.png" /></div>
+            <div class="col-2"><img id="userPic" src="img/eddy.png" /></div>
             <div class="col-8">
               <h5 class="card-title" style="color: black">
                 Eddy Yeung <i class="fas fa-star"></i><i class="fas fa-star"></i
