--- a/index2.htm
+++ b/index2.htm
@@ -216,8 +216,87 @@
         </div>
       </div>
     </div>
+    <div
+      class="card"
+      style="width: 60rem; margin-left: 300px; margin-top: 50px;"
+    >
+      <div class="card-body">
+        <div class="container">
+          <div class="row">
+            <div class="col-2"><img id="userPic" src="img/ed.png" /></div>
+            <div class="col-8">
+              <h5 class="card-title" style="color: black">
+                Eddy Yeung <i class="fas fa-star"></i><i class="fas fa-star"></i
+                ><i class="fas fa-star"></i><i class="fas fa-star"></i>
+              </h5>
+              <h5 class="card-subtitle mb-2 text-muted">
+                Skills: Web dev, Python
+              </h5>
+              <h5 class="card-subtitle mb-2 text-muted">
+                Age range: Middle School, College
+              </h5>
+            </div>
+            <div class="col-23" style="color: black">
+              <h5>~8 miles away</h5>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div
+      class="card"
+      style="width: 60rem; margin-left: 300px; margin-top: 50px;"
+    >
+      <div class="card-body">
+        <div class="container">
+          <div class="row">
+            <div class="col-2"><img id="userPic" src="img/edd.png" /></div>
+            <div class="col-8">
+              <h5 class="card-title" style="color: black">
+                Eddy Yeung <i class="fas fa-star"></i><i class="fas fa-star"></i
+                ><i class="fas fa-star"></i><i class="fas fa-star"></i>
+              </h5>
+              <h5 class="card-subtitle mb-2 text-muted">
+                Skills: Web dev, Python
+              </h5>
+              <h5 class="card-subtitle mb-2 text-muted">
+                Age range: Middle School, College
+              </h5>
+            </div>
+            <div class="col-23" style="color: black">
+              <h5>~8 miles away</h5>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div
+      class="card"
+      style="width: 60rem; margin-left: 300px; margin-top: 50px;"
+    >
+      <div class="card-body">
+        <div class="container">
+          <div class="row">
+            <div class="col-2"><img id="userPic" src="img/eddy.png" /></div>
+            <div class="col-8">
+              <h5 class="card-title" style="color: black">
+                Eddy Yeung <i class="fas fa-star"></i><i class="fas fa-star"></i
+                ><i class="fas fa-star"></i><i class="fas fa-star"></i>
+              </h5>
+              <h5 class="card-subtitle mb-2 text-muted">
+                Skills: Web dev, Python
+              </h5>
+              <h5 class="card-subtitle mb-2 text-muted">
+                Age range: Middle School, College
+              </h5>
+            </div>
+            <div class="col-23" style="color: black">
+              <h5>~8 miles away</h5>
+            </div>
+          </div>
+        </div>
+      </div>
 
-    
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script
