--- a/index.htm
+++ b/index.htm
@@ -199,7 +199,7 @@
             <div class="col-2"><img id="userPic" src="img/ed.png" /></div>
             <div class="col-8">
               <h5 class="card-title" style="color: black">
-                Eddy Yeung <i class="fas fa-star"></i><i class="fas fa-star"></i
+                Ed <i class="fas fa-star"></i><i class="fas fa-star"></i
                 ><i class="fas fa-star"></i><i class="fas fa-star"></i>
               </h5>
               <h5 class="card-subtitle mb-2 text-muted">
@@ -226,7 +226,7 @@
             <div class="col-2"><img id="userPic" src="img/edd.png" /></div>
             <div class="col-8">
               <h5 class="card-title" style="color: black">
-                Eddy Yeung <i class="fas fa-star"></i><i class="fas fa-star"></i
+                Edd <i class="fas fa-star"></i><i class="fas fa-star"></i
                 ><i class="fas fa-star"></i><i class="fas fa-star"></i>
               </h5>
               <h5 class="card-subtitle mb-2 text-muted">
@@ -253,7 +253,7 @@
             <div class="col-2"><img id="userPic" src="img/eddy.png" /></div>
             <div class="col-8">
               <h5 class="card-title" style="color: black">
-                Eddy Yeung <i class="fas fa-star"></i><i class="fas fa-star"></i
+                Eddy <i class="fas fa-star"></i><i class="fas fa-star"></i
                 ><i class="fas fa-star"></i><i class="fas fa-star"></i>
               </h5>
               <h5 class="card-subtitle mb-2 text-muted">
